# BACKEND

./: .env  README.md  langserve.yaml  main.py  mapa_interactivo.html  pyproject.toml  railway.json  requirements.txt
env/: pyvenv.cfg
