[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KevinSC <37247567+KevinCorrea5103@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
langserve = "^0.2.2"
langchain-openai = "^0.1.19"
langchain = "^0.2.11"
faiss-cpu = "^1.8.0.post1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
